[metadata]
name = abc_network
version = attr: ABC.__version__
url = https://github.com/Juillermo/ABC.git
author = Guillermo Romero Moreno
author_email = Guillermo.RomeroMoreno@ed.ac.uk
description = This package provides code linked to the paper "Multimorbidity analysis with low condition counts: a robust Bayesian approach for small but important subgroups" <https://authors.elsevier.com/sd/article/S2352396424001166>.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Bayesian, Multimorbidity
license = GNU GENERAL PUBLIC LICENSE
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent



[options]
packages = find:
install_requires = 
	numpy
	scipy
	pandas
	matplotlib
	seaborn
	networkx
	bokeh==3.3.0
	cmdstanpy
	jupyter
	ucimlrepo
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
	ABC = ABC.model:main

[options.package_data]
ABC = models/*.stan
